
@todo .. change htaccess rules in userguide DirectoryIndex index.php, index.html
@todo .. Global controllers pattern extends rules ..!!!
@todo .. put archived doc meta tag to old user guide base layout ..
@todo .. look at globally set database object from app_controller.
@todo .. change obullo mvc2 names as Obullo GC in web site.                                                   


@next version todo .. look at include ob_error.php errors when someone use third party session library.
@next version todo .. if not posted a variable in form_validate class add it to log debug msg..
this variable not posted !!! .. 
@next version todo .. implement database driver with native sessions .. 
@next version todo .. implement Parser and Agent Class as Php5 and move them into /php5 folder.
@next version todo .. add $this->config->set_item('log_threshold', 1); to log helper, we will control it in app_controller
@next version todo .. zend and kohana libraries load support (important)
@next version todo .. add LOG users messages level '5' => 'REPORT', , change fopen write log, add error_log() func. 
@next version todo .. logging for exceptions, exception reports
@next version todo .. driver files for security helper.. xss functions .. i_post('', callback_func);
@next version todo .. memcache or shmop session memory container.
@next version todo .. db_item() function should be set in config class, so user can change database config 
items globally like this in global_controller ..
$this->config->set_db_item();
@next version todo .. add user_guide pages to svn as static html.
@next version todo .. add $this->db->get_sql() for output "raw sql".
@next add user_guide pages to svn as static html.
@next version todo .. pager class
@next version todo .. active record union possibility ?
@next version todo .. http://stackoverflow.com/questions/1319611/zend-framework-select-objects-and-union
@next version todo .. datamapper class