@@ -250,7 +250,7 @@ $config['encryption_key']        = "";
 $config['sess_cookie_name']      = 'ob_session';
 $config['sess_expiration']       = 7200;
 $config['sess_encrypt_cookie']   = FALSE;
-$config['sess_driver']           = 'cookie';  // or database
+$config['sess_driver']           = 'cookie';  // cookie | database
 $config['sess_db_var']           = 'db';            
 $config['sess_table_name']       = 'ob_sessions';
 $config['sess_match_ip']         = FALSE;
